# Django-Site

./: README.md
workplace/littlelemon/: db.sqlite3  pyproject.toml
workplace/littlelemon/restaurant/: models.py  test_models.py  views.py
workplace/littlelemon/restaurant/migrations/: 0001_initial.py  0002_menu_menu_item_description.py
workplace/littlelemon/restaurant/templates/: menu.html  menu_item.html
workplace/littlelemon/restaurant/templates/partials/: _footer.html
